# nRF-IEEE-802.15.4-radio-driver-1

./: .uncrustify.cfg  CMakeLists.txt  CMakeLists.zephyr.cmake  Jenkinsfile  project.yml
deploy/baremetal/: CMakeLists.txt  deployfile.sh
deploy/ncs/modules/hal/nordic/drivers/: deployfile.sh
deploy/ncs/modules/hal/nordic/drivers/nrf_radio_802154/: CMakeLists.txt
deploy/ncs/nrf/: child-image.patch  deployfile.sh
deploy/ncs/zephyr/: deployfile.sh  serialization-sample.patch
deploy/ncs/zephyr/modules/: deployfile.sh
doc/: buildjars.xml  radio_driver.doxyfile
doc/deprecated/: _Sidebar.md
doc/diagrams/: coex_rx_general.plantuml  coex_tx_general.plantuml
doc/dox/: 01_mainpage.dox  architecture.dox  features_description.dox  front_end_module.dox  hardware_resources.dox  radio_driver_coex.dox  rd_release_notes.dox  source_files.dox
doc/filelists/: radio_driver.doxyfile
doc/images/coex/src/: coex_tx_mode_after_cca.plantuml  coex_tx_mode_before_cca.plantuml  coex_tx_mode_full_csmaca.plantuml
doc/internal_docs/: README.txt  sequence_diagrams.dox
doc/manifest/: MANIFEST.MF.rd
driver/: nrf_802154_driver_sources.cmake
driver/doc/internal_docs/: sample_application.dox
include/: nrf_802154.h  nrf_802154_types.h
scripts/: deploy.sh  deploy_baremetal.sh  deploy_ncs.sh  deploy_west.sh
src/: nrf_802154.c  nrf_802154.h  nrf_802154_ant_diversity.c  nrf_802154_config.h  nrf_802154_const.h  nrf_802154_core.c  nrf_802154_core.h  nrf_802154_critical_section.c  nrf_802154_debug.c  nrf_802154_debug_gpio.c  nrf_802154_debug_log_codes.h  nrf_802154_notification_swi.c  nrf_802154_peripherals.h  nrf_802154_pib.c  nrf_802154_pib.h  nrf_802154_priority_drop_swi.c  nrf_802154_request.h  nrf_802154_request_direct.c  nrf_802154_request_swi.c  nrf_802154_swi.c  nrf_802154_timer_coord.c  nrf_802154_trx.c  nrf_802154_trx.h  nrf_802154_trx_dppi.c  nrf_802154_trx_ppi.c  nrf_802154_trx_ppi.h  nrf_802154_trx_ppi_api.h  nrf_802154_types.h  nrf_802154_utils.h
src/fem/: nrf_fem_control_config.h  nrf_fem_protocol_api.h
src/fem/simple_gpio/: nrf_fem_simple_gpio.c
src/fem/three_pin_gpio/: nrf_fem_three_pin_gpio.c
src/mac_features/: nrf_802154_ifs.c
src/platform/clock/: nrf_802154_clock_nodrv.c  nrf_802154_clock_nrfx.c  nrf_802154_clock_sdk.c
src/platform/hp_timer/: nrf_802154_hp_timer.c
src/platform/lp_timer/: nrf_802154_lp_timer_nodrv.c
src/rsch/raal/softdevice/: nrf_raal_softdevice.c
test/deprecated/csma_ca/: README.md  unity_test.c
test/mocks/: trx_callouts.h
test/mocks/periph_mock/: core_cm4.h  core_cm_common.h  nrf.h  nrf_mock.c  nrf_mock.h  nrfx_config.h
test/unit_tests/: README.md  test_ack_pending_bit.c  test_ack_source_matching.c  test_nrf_802154_rssi.c  test_nrf_802154_trx.c  test_nrf_802154_trx_dppi.c  test_nrf_802154_trx_ppi.c  unit_test_boilerplate.cmake  unit_test_utils.h
test/unit_tests/ack_pending_bit/: CMakeLists.txt  prj.conf  unity_test.c
test/unit_tests/ack_source_matching/: CMakeLists.txt  prj.conf  unity_test.c
test/unit_tests/variations/: nrf52811.yml  nrf52820.yml  nrf52833.yml  nrf52840.yml  nrf5340.yml
zephyr/: module.yml
