set(NRF_802154_DRIVER_ROOT $CMAKE_CURRENT_SOURCE_DIR)

include(nrf_802154_driver_sources.cmake)

add_library(radio_driver $NRF_802154_DRIVER_SOURCES_NRF52 $NRF_802154_DRIVER_SOURCES_SWI)

target_link_libraries(radio_driver nrfx)
target_link_libraries(radio_driver nrf_802154_sl)
target_link_libraries(radio_driver nrf_802154_sl_platform)
target_include_directories(radio_driver PUBLIC NRF_802154_DRIVER_INCLUDE_DIRS)
